# AI_Loop_MCP

./: .env.example  .gitignore  AGENTS.md  CLAUDE_CODE_BUILD.md  README.md  SETUP.md  pyproject.toml  tool_contract.md
specs/: mcp_registration.example.json  tool_contract.md
src/looping_mcp/: __init__.py  checker.py  classifier.py  cli.py  criteria.py  dashboard.py  escalation.py  gitops.py  governor.py  llm.py  protocol.py  server.py  state.py
tests/: conftest.py  test_checker.py  test_classifier.py  test_cli.py  test_confirm.py  test_criteria.py  test_dashboard.py  test_e2e.py  test_escalation.py  test_gitops.py  test_governor.py  test_merge_flow.py  test_protocol.py  test_server_loop.py  test_state.py
